--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           >
           <ul class="header-list">
             <li class="nav-list">
-              <a class="header-link link" href="./index.html">Studio</a>
+              <a class="header-link current link" href="./index.html">Studio</a>
             </li>
             <li class="nav-list">
               <a class="header-link link" href="./portfolio.html">Portfolio</a>
@@ -428,5 +428,17 @@
         </div>
       </div>
     </footer>
+
+    <!-- ____________________MODAL______________________ -->
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-btn">
+          <svg class="modal-icon" width="8" height="8">
+            <use href="./img/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
   </body>
 </html>
