--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,9 @@
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="nav-list">
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+              <a class="header-link current link" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="nav-list">
               <a class="header-link link" href="./contacts">Contacts</a>
@@ -101,13 +103,21 @@
           <!-- _______________GALLERY_____________ -->
           <ul class="gallery-list">
             <li class="gallery-item">
-              <a class="gallery-link" href="">
-                <img
-                  src="./img/gallery-1.jpg"
-                  alt="banking-interface"
-                  width="360"
-                  height="300"
-                />
+              <a class="gallery-link" href="#">
+                <div class="overlay">
+                  <img
+                    src="./img/gallery-1.jpg"
+                    alt="banking-interface"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="image-hover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="project-wrapper">
                   <h2 class="gallery-titles">Banking App Interface Concept</h2>
                   <p class="gallery-program">App</p>
@@ -129,7 +139,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a class="gallery-link" href="">
+              <a class="gallery-link" href="#">
                 <img
                   src="./img/gallery-3.jpg"
                   alt="meditation-app"
