--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <section class="hero section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-button button-hero" type="button">
+          <button class="hero-button button-hero" type="button" data-modal-open>
             Order Service
           </button>
         </div>
@@ -430,15 +430,15 @@
     </footer>
 
     <!-- ____________________MODAL______________________ -->
-    <div class="backdrop">
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-btn">
+        <button class="modal-btn" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
             <use href="./img/icons.svg#icon-close"></use>
           </svg>
         </button>
       </div>
     </div>
-
+    <script src="./modal.js"></script>
   </body>
 </html>
