--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           >
           <ul class="header-list">
             <li class="nav-list">
-              <a class="header-link current link" href="./index.html">Studio</a>
+              <a class="header-link current-studio link" href="./index.html">Studio</a>
             </li>
             <li class="nav-list">
               <a class="header-link link" href="./portfolio.html">Portfolio</a>
