--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="nav-list">
-              <a class="header-link current link" href="./portfolio.html"
+              <a class="header-link current-portfolio link" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
@@ -104,14 +104,14 @@
           <ul class="gallery-list">
             <li class="gallery-item">
               <a class="gallery-link" href="#">
-                <div class="overlay">
+                <div class="thumb-gallery">
                   <img
                     src="./img/gallery-1.jpg"
                     alt="banking-interface"
                     width="360"
                     height="300"
                   />
-                  <p class="image-hover-text">
+                  <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
